Changed the tags section again

--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -2845,6 +2845,10 @@ main {
 .tags-blurb {
   padding-bottom: 4em; }
 
+.tag-examples a {
+  padding: 0.5em;
+  margin-bottom: 0.005em; }
+
 #tags-vip {
   width: 310px;
   height: 159px;
